# balcia-bdt

./: .env  .gitignore  Cargo.toml  README.md
data/TT/: TT.json  columns.csv  data copy.csv  data.csv  data_error.csv  data_extra_data.csv  tables.csv
render/: bdtlist.hbs  csv_data.hbs  sqlite.hbs
sql/: bdt.sql
src/: bdt.rs  classifier.rs  csv_adapter.rs  csv_data_adapter.rs  en_date_format.rs  format.rs  json_adapter.rs  main.rs  oracle_adapter.rs  sql_adapter.rs  sqlite_adapter.rs
src/bdt/: column_type.rs  column_value.rs  table_name.rs
src/csv_adapter/: csv_model.rs
src/format/: en_date_format.rs  lv_date_format.rs
src/l11n/: language.rs
