[package]
name = "balcia-bdt-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.23"
regex = "1.7.1"
handlebars = "4.3.6"
include-oracle-sql = "0.2.2"
sibyl = { version = "0.6.16", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
